--- a/Aula-dez-02/projeto/public/index.html
+++ b/Aula-dez-02/projeto/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 18</title>
+    <title>Aula 02 DEZ</title>
 </head>
 <body>
     <div id="root"></div>
